--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,9 @@
 services:
   lightrag:
     container_name: lightrag
-    image: ghcr.io/hkuds/lightrag:latest
-    build:
-      context: .
-      dockerfile: Dockerfile
-      tags:
-        - ghcr.io/hkuds/lightrag:latest
+    image: elecoxy/capture-lightrag:1.0.1
     ports:
-      - "${PORT:-9621}:9621"
+      - "${PORT:-80}:80"
     volumes:
       - ./data/rag_storage:/app/data/rag_storage
       - ./data/inputs:/app/data/inputs
